# lernomatic

./: .gitignore  .travis.yml  README.md  build_cuda.py  cnn_vis_test.py  dcgan_infer.sh  environment.yml  environment_linux.yml  environment_osx.yml  imgflip_scraper.py  pyproject.toml  requirements.txt  saliency_vis_test.py  setup.py  setup.sh  tensor_vis_test.py  travis.yml  who_killed_hannibal.json
data/: celeba_128x128_history.txt  celeba_64x64_history.txt
doc/: inferrer.md  model.md  trainer.md  user_guide.md
docs/: inferrer.md  model.md  trainer.md  user_guide.md
examples/: .gitignore  ex_cats_vs_dogs.py  ex_coco_capt.py  ex_lr_finder.py  ex_lr_schedule_cifar10.py  ex_lr_schedule_cifar100.py  ex_lr_scheduling.py  ex_proc_coco_data.py  ex_resnet_cifar10.py  ex_resnet_cifar10_lr_schedule.py  ex_resnet_imagenet.py  ex_superconverge.py  ex_train_cifar10.py  ex_train_dcgan.py  ex_train_image_capt.py  ex_train_mnist.py  ex_train_mnist_auto.py  ex_train_mnist_param.py  ex_train_mnist_vae.py  ex_train_resnets.py  train_image_caption.sh
scripts/: dcgan_animate_history.sh  gen_caltech_birds.sh  gen_dcgan_celeba.sh  gen_dcgan_unit_test_data.sh  gen_pix2pix_night2day.sh  gen_pix2pix_night2day_unit_test_data.sh  train_image_caption.sh
test/: conftest.py  run_tests.sh  test_adversarial_trainer.py  test_audio_feature.py  test_caption_infer.py  test_cornell_movie_corpus.py  test_dcgan_trainer.py  test_enc_dec_trainer.py  test_find_lr.py  test_image_capt_trainer.py  test_image_proc.py  test_inferrer.py  test_learning_rate.py  test_lr_finder.py  test_mnist_trainer.py  (+13 more)
(+248 files in other folders)
